# zig-pico

./: .clangd  CMakeLists.txt  README.md  build.zig
include/: zig-pico.h
src/: main.zig
